packages/perseus-editor/src/widgets/radio/radio-editor.module.css
.tile {
    display: flex;
    flex-direction: column;
    background-color: var(
        --wb-semanticColor-core-background-instructive-subtle
    );
    border: 1px solid var(--wb-semanticColor-core-border-neutral-subtle);
    border-radius: var(--wb-sizing-size_120);
    padding-inline: var(--wb-sizing-size_120);
    padding-block: var(--wb-sizing-size_040);
    margin-block-end: var(--wb-sizing-size_120);
}

.status-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    gap: var(--wb-sizing-size_080);
}

.radio-option-actions-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-block-start: var(--wb-sizing-size_080);
}

.button-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-block-start: var(--wb-sizing-size_080);
}

.image-editor-container {
    display: flex;
    flex-direction: column;
    position: relative;
    padding: var(--wb-sizing-size_080);
    padding-block-start: var(--wb-sizing-size_240);
    border: 1px solid var(--wb-semanticColor-core-border-neutral-default);
    border-radius: var(--wb-sizing-size_080);
    margin-block-start: var(--wb-sizing-size_080);
    background-color: var(--wb-semanticColor-core-background-base-default);
}

